welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:48: error: ':' expected but '.' found.
def colorierSol(Color.yellow){
                     ^FlowerPot:69: error: identifier expected but '}' found.
}
^